[TASK] Add submodule for TYPO3.Conference package
Change-Id: Ieee558f1872b3c454ca5e82cf1e9f3a3fca384c9

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "Packages/Sites/TYPO3.T3con12QuebecTypo3Org"]
 	path = Packages/Sites/TYPO3.T3con12QuebecTypo3Org
 	url = git://git.typo3.org/FLOW3/Packages/TYPO3.T3con12QuebecTypo3Org.git
+[submodule "Packages/Plugins/TYPO3.Conference"]
+	path = Packages/Plugins/TYPO3.Conference
+	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Conference.git
