[TASK] Add .Shortcuts to .gitignore file
Change-Id: I127cbda3e05749bd271c4cab49526cd18a16a84f

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Build/Resources/Java/ext-doc/java/src/main/extdoc/jsdoc/tplschema/
 /Configuration/PackageStates.php
 /Configuration/Settings.yaml
 /Data/
+/Packages/.Shortcuts/
 /Tests/Selenium/settings.xml
 /Tests/Unit/
 /Web/_Resources/
