--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,8 @@ Build/Resources/Java/ext-doc/java/src/main/extdoc/jsdoc/tplschema/
 /Configuration/Production/IncludeCachedConfigurations.php
 /Configuration/PackageStates.php
 /Configuration/Settings.yaml
+/Configuration/Production/Settings.yaml
+/Configuration/Development/Settings.yaml
 /Data/
 /Packages/.Shortcuts/
-/Tests/Selenium/settings.xml
-/Tests/Unit/
 /Web/_Resources/
-
-# ignore the downloaded selenium server, and the selenium
-# temporary directory (which starts with a quote, do not ask why...)
-Build/Resources/Java/selenium-server-standalone*
-/"
