--- a/Web/.htaccess
+++ b/Web/.htaccess
@@ -20,10 +20,10 @@
 	# Set flag so we know URL rewriting is available
 	SetEnv FLOW3_REWRITEURLS 1
 
-	# You will have to enable the following option and change the path if you
+	# You will have to change the path in the following option if you
 	# experience problems while your installation is located in a subdirectory
 	# of the website root.
-#	RewriteBase /
+	RewriteBase /
 
 	# fix ssl weirdness caused by IP reuse
 	RewriteCond %{HTTP_HOST} ^integration.t3con11-frankfurt.typo3.robertlemke.net$ [NC]
