[TASK] Add TYPO3.Eel submodule
This change adds the TYPO3.Eel submodule with a pointer to current
master of this package.

Change-Id: I583dafd3874edb468bf3c6c4df21aae6d6d4b30d

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "Packages/Plugins/TYPO3.MailForm"]
 	path = Packages/Plugins/TYPO3.MailForm
 	url = git://git.typo3.org/FLOW3/Packages/TYPO3.MailForm.git
+[submodule "Packages/Application/TYPO3.Eel"]
+	path = Packages/Application/TYPO3.Eel
+	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Eel.git
