[TASK] Adding DomCrawler to distribution
Related: #36830
Change-Id: Ie708d2b3efad58cdfaf18a7ccfcb2264f1ffc8c2

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "Packages/Application/TYPO3.Form"]
 	path = Packages/Application/TYPO3.Form
 	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Form.git
+[submodule "Packages/Framework/Symfony.Component.DomCrawler"]
+	path = Packages/Framework/Symfony.Component.DomCrawler
+	url = git://git.typo3.org/FLOW3/Packages/Symfony.Component.DomCrawler.git
