[TASK] Include Conference sub routes
Change-Id: I15e2cbdb04bb6206725a6ad30f6ee3d6f09abd4f

--- a/Configuration/Routes.yaml
+++ b/Configuration/Routes.yaml
@@ -8,6 +8,16 @@
 #                                                                        #
 
 ##
+# Conference subroutes
+
+-
+  name: 'Conference'
+  uriPattern: '<ConferenceSubroutes>'
+  subRoutes:
+    ConferenceSubroutes:
+      package: TYPO3.Conference
+
+##
 # TYPO3 subroutes
 
 -
