--- a/.gitmodules
+++ b/.gitmodules
@@ -1,78 +1,78 @@
 [submodule "Build/Common"]
 	path = Build/Common
-	url = git://git.typo3.org/FLOW3/BuildEssentials
+	url = git://git.typo3.org/Flow/BuildEssentials.git
 [submodule "Packages/Framework/Doctrine.Common"]
 	path = Packages/Framework/Doctrine.Common
-	url = git://git.typo3.org/FLOW3/Packages/Doctrine.Common.git
+	url = git://git.typo3.org/Packages/Doctrine.Common.git
 [submodule "Packages/Framework/Doctrine.DBAL"]
 	path = Packages/Framework/Doctrine.DBAL
-	url = git://git.typo3.org/FLOW3/Packages/Doctrine.DBAL.git
+	url = git://git.typo3.org/Packages/Doctrine.DBAL.git
 [submodule "Packages/Framework/Doctrine.ORM"]
 	path = Packages/Framework/Doctrine.ORM
-	url = git://git.typo3.org/FLOW3/Packages/Doctrine.ORM.git
+	url = git://git.typo3.org/Packages/Doctrine.ORM.git
 [submodule "Packages/Framework/TYPO3.FLOW3"]
 	path = Packages/Framework/TYPO3.FLOW3
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.FLOW3.git
+	url = git://git.typo3.org/Packages/TYPO3.Flow.git
 [submodule "Packages/Framework/TYPO3.Fluid"]
 	path = Packages/Framework/TYPO3.Fluid
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Fluid.git
+	url = git://git.typo3.org/Packages/TYPO3.Fluid.git
 [submodule "Packages/Framework/TYPO3.Kickstart"]
 	path = Packages/Framework/TYPO3.Kickstart
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Kickstart.git
+	url = git://git.typo3.org/Packages/TYPO3.Kickstart.git
 [submodule "Packages/Framework/TYPO3.Party"]
 	path = Packages/Framework/TYPO3.Party
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Party.git
+	url = git://git.typo3.org/Packages/TYPO3.Party.git
 [submodule "Packages/Framework/Symfony.Component.Yaml"]
 	path = Packages/Framework/Symfony.Component.Yaml
-	url = git://git.typo3.org/FLOW3/Packages/Symfony.Component.Yaml.git
+	url = git://git.typo3.org/Packages/Symfony.Component.Yaml.git
 [submodule "Packages/Application/Aloha"]
 	path = Packages/Application/Aloha
-	url = git://git.typo3.org/FLOW3/Packages/Aloha.git
+	url = git://git.typo3.org/Packages/TYPO3.Aloha.git
 [submodule "Packages/Application/TYPO3.MailForm"]
 	path = Packages/Application/TYPO3.MailForm
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.MailForm.git
+	url = git://git.typo3.org/Packages/TYPO3.MailForm.git
 [submodule "Packages/Application/TYPO3.SwiftMailer"]
 	path = Packages/Application/TYPO3.SwiftMailer
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.SwiftMailer.git
+	url = git://git.typo3.org/Packages/TYPO3.SwiftMailer.git
 [submodule "Packages/Application/TYPO3.TYPO3"]
 	path = Packages/Application/TYPO3.TYPO3
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.TYPO3.git
+	url = git://git.typo3.org/Packages/TYPO3.Neos.git
 [submodule "Packages/Application/TYPO3.TYPO3CR"]
 	path = Packages/Application/TYPO3.TYPO3CR
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.TYPO3CR.git
+	url = git://git.typo3.org/Packages/TYPO3.TYPO3CR.git
 [submodule "Packages/Application/TYPO3.TypoScript"]
 	path = Packages/Application/TYPO3.TypoScript
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.TypoScript.git
+	url = git://git.typo3.org/Packages/TYPO3.TypoScript.git
 [submodule "Packages/Application/TYPO3.Media"]
 	path = Packages/Application/TYPO3.Media
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Media.git
+	url = git://git.typo3.org/Packages/TYPO3.Media.git
 [submodule "Packages/Application/TYPO3.ExtJS"]
 	path = Packages/Application/TYPO3.ExtJS
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.ExtJS.git
+	url = git://git.typo3.org/Packages/TYPO3.ExtJS.git
 [submodule "Packages/Application/Imagine"]
 	path = Packages/Application/Imagine
-	url = git://git.typo3.org/FLOW3/Packages/Imagine.git
+	url = git://git.typo3.org/Packages/TYPO3.Imagine.git
 [submodule "Packages/Sites/TYPO3.T3con12QuebecTypo3Org"]
 	path = Packages/Sites/TYPO3.T3con12QuebecTypo3Org
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.T3con12QuebecTypo3Org.git
+	url = git://git.typo3.org/Packages/TYPO3.T3con12QuebecTypo3Org.git
 [submodule "Packages/Plugins/TYPO3.Conference"]
 	path = Packages/Plugins/TYPO3.Conference
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Conference.git
+	url = git://git.typo3.org/Packages/TYPO3.Conference.git
 [submodule "Packages/Plugins/TYPO3.MailForm"]
 	path = Packages/Plugins/TYPO3.MailForm
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.MailForm.git
+	url = git://git.typo3.org/Packages/TYPO3.MailForm.git
 [submodule "Packages/Application/TYPO3.Eel"]
 	path = Packages/Application/TYPO3.Eel
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Eel.git
+	url = git://git.typo3.org/Packages/TYPO3.Eel.git
 [submodule "Packages/Application/TYPO3.Setup"]
 	path = Packages/Application/TYPO3.Setup
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Setup.git
+	url = git://git.typo3.org/Packages/TYPO3.Setup.git
 [submodule "Packages/Application/Twitter.Bootstrap"]
 	path = Packages/Application/Twitter.Bootstrap
-	url = git://git.typo3.org/FLOW3/Packages/Twitter.Bootstrap.git
+	url = git://git.typo3.org/Packages/TYPO3.Twitter.Bootstrap.git
 [submodule "Packages/Application/TYPO3.Form"]
 	path = Packages/Application/TYPO3.Form
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Form.git
+	url = git://git.typo3.org/Packages/TYPO3.Form.git
 [submodule "Packages/Framework/Symfony.Component.DomCrawler"]
 	path = Packages/Framework/Symfony.Component.DomCrawler
-	url = git://git.typo3.org/FLOW3/Packages/Symfony.Component.DomCrawler.git
+	url = git://git.typo3.org/Packages/Symfony.Component.DomCrawler.git
